# blog

./: .gitignore  hugo.toml
.github/workflows/: hugo.yml
content/1-the-sync-bound-nobody-asked-for/: Cargo.toml  index.md
content/1-the-sync-bound-nobody-asked-for/examples/: demo-1.1.rs  demo-1.2.rs  demo-2.1.rs  demo-2.2.rs  step-1.rs  step-2.rs  step-3.rs
content/1-the-sync-bound-nobody-asked-for/src/: lib.rs
content/2-respectful-yaml-patching-in-rust/: Cargo.toml  index.md
content/2-respectful-yaml-patching-in-rust/examples/: yamlpatch-replace-list.rs  yamlpatch-rotate-replace-list.rs
content/2-respectful-yaml-patching-in-rust/fixtures/: assets.yaml
content/2-respectful-yaml-patching-in-rust/src/: main.rs
content/2-respectful-yaml-patching-in-rust/src/backends/: yaml_edit.rs
content/3-async-actor-sidecar-with-tokio-weak-sender/: Cargo.toml  index.md
content/3-async-actor-sidecar-with-tokio-weak-sender/examples/: counter.rs  generic-weak.rs  generic.rs  rc-weak.rs  sidecar.rs  ticker.rs
content/3-think-twice-before-deriving-serde/: Cargo.toml  index.md
content/3-think-twice-before-deriving-serde/examples/: domain-object-fe.rs  domain-object.rs
content/3-think-twice-before-deriving-serde/src/: lib.rs
content/about/: index.md
layouts/: 404.html
layouts/_default/: baseof.html  list.html  single.html
layouts/shortcodes/: code.html
posts/1-the-sync-bound-nobody-asked-for/: Cargo.toml  index.md
posts/1-the-sync-bound-nobody-asked-for/examples/: step-2.rs  step-3.rs
posts/1-the-sync-bound-nobody-asked-for/src/: lib.rs
posts/2-guarding-select-branches/: Cargo.toml  index.md
posts/2-guarding-select-branches/examples/: step-1.rs  step-2.rs
posts/2-guarding-select-branches/src/: lib.rs
posts/2-respectful-yaml-patching-in-rust/: index.md
posts/2-respectful-yaml-patching-in-rust/examples/: yamlpatch-flow-list.rs
posts/2-respectful-yaml-patching-in-rust/src/backends/: mod.rs  rust_yaml.rs  yamlpatch.rs  yamp.rs
posts/3-crossbeam-select-by-index/: Cargo.toml  index.md
posts/3-crossbeam-select-by-index/examples/: step-1.rs  step-2.rs  step-3.rs
posts/3-crossbeam-select-by-index/src/: lib.rs
