[package]
name = "the-sync-bound-nobody-asked-for"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt"] }
static_assertions = "1"

[lints.rust]
dead_code = "allow"

[[example]]
name = "demo-1-1"
path = "examples/demo-1.1.rs"
crate-type = ["lib"]

[[example]]
name = "demo-1-2"
path = "examples/demo-1.2.rs"
crate-type = ["lib"]

[[example]]
name = "demo-2-1"
path = "examples/demo-2.1.rs"
crate-type = ["lib"]

[[example]]
name = "demo-2-2"
path = "examples/demo-2.2.rs"
crate-type = ["lib"]

[[example]]
name = "step-1"
path = "examples/step-1.rs"
crate-type = ["lib"]

[[example]]
name = "step-2"
path = "examples/step-2.rs"
crate-type = ["lib"]

[[example]]
name = "step-3"
path = "examples/step-3.rs"
crate-type = ["lib"]
