[package]
name = "think-twice-before-deriving-serde"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
dead_code = "allow"

[[example]]
name = "domain-object"
path = "examples/domain-object.rs"
crate-type = ["lib"]

[[example]]
name = "domain-object-fe"
path = "examples/domain-object-fe.rs"
crate-type = ["lib"]
